Fixed zine preview text color in dark mode.

--- a/public/css/zine.css
+++ b/public/css/zine.css
@@ -76,6 +76,11 @@
   body {
     background-color: #424242;
   }
+
+  .zine p,
+  .zine mark {
+    color: black !important;
+  }
 }
 
 @media screen {
